[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cambrian"
version = "1.0.0"
description = "A Fully Open, Vision-Centric Exploration of Multimodal LLMs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch>=2,<3",
    "torchvision>=0,<1",
    "transformers>=4,<5",
    "tokenizers>=0,<1",
    "sentencepiece>=0,<2",
    "shortuuid",
    "accelerate>=1,<2",
    "peft>=0,<1",
    "pydantic",
    "markdown2[all]",
    "numpy>=2,<3",
    "scikit-learn>=1,<2",
    "requests",
    "httpx>=0,<1",
    "uvicorn",
    "fastapi",
    "einops>=0,<1",
    "einops-exts>=0,<1",
    "timm>=0,<1",
    "open_clip_torch",
    "diffusers[torch]",
    "torchtext>=0,<1",
    "ezcolorlog",
    "gcsfs",
]

[project.optional-dependencies]
gpu = ["bitsandbytes>=0,<1", "deepspeed>=0,<1", "ninja", "wandb", "fastapi", "gradio>=5,<6", "gradio_client>=0,<1"]
tpu = ["ninja", "wandb"]

[project.urls]
"Homepage" = "https://cambrian-mllm.github.io/"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
